--- a/me/index.html
+++ b/me/index.html
@@ -11,7 +11,7 @@
 <!--[if lt IE 9]> 
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <![endif]-->
-<title>ME – Resume and Personal Portfolio Responsive Template</title>
+<title>Portfolio Page | TV Thyagharajon</title>
 <meta name="description" content="">
 <meta name="author" content="WebThemez">
 <!--[if lt IE 9]>
@@ -35,16 +35,16 @@
     <nav class="navbar navbar-inverse" role="navigation">
       <div class="navbar-header">
         <button type="button" id="nav-toggle" class="navbar-toggle" data-toggle="collapse" data-target="#main-nav"> <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
-        <a href="#" class="navbar-brand scroll-top logo"><b>Me..</b></a> </div>
+        <a href="#" class="navbar-brand scroll-top logo"><b>Home</b></a> </div>
       <!--/.navbar-header-->
       <div id="main-nav" class="collapse navbar-collapse">
         <ul class="nav navbar-nav" id="mainNav">
           <li class="active"><a href="#home" class="scroll-link">Home</a></li>
-          <li><a href="#aboutUs" class="scroll-link">About Us</a></li>
+          <li><a href="#aboutUs" class="scroll-link">About</a></li>
           <li><a href="#skills" class="scroll-link">Skills</a></li>
           <li><a href="#experience" class="scroll-link">Experience</a></li>
           <li><a href="#portfolio" class="scroll-link">Portfolio</a></li>
-          <li><a href="#contactUs" class="scroll-link">Contact Us</a></li>
+          <li><a href="#contactUs" class="scroll-link">Contact</a></li>
         </ul>
       </div>
       <!--/.navbar-collapse--> 
@@ -59,8 +59,8 @@
   <div class="banner-container"> <img src="images/banner-bg.jpg" alt="banner" />
     <div class="container banner-content">
       <div class="heroText">
-        <h2><span>HEllo, I'm</span><br>
-          Steve Smith</h2>
+        <h2><span>Hello, I'm</span><br>
+          TV Thyagharajon</h2>
         <span class="caption">UX Designer / Frontend Developer</span> </div>
     </div>
   </div>
