--- a/me/index.html
+++ b/me/index.html
@@ -61,7 +61,7 @@
       <div class="heroText">
         <h2><span>Hello, I'm</span><br>
           TV Thyagharajon</h2>
-        <span class="caption">UX Designer / Frontend Developer</span> </div>
+        <span class="caption">Escalate.Emulate</span> </div>
     </div>
   </div>
 </section>
@@ -81,7 +81,7 @@
       <div class="col-md-4 tileBox"> <img src="images/photo-1.jpg" alt="me"/> </div>
       <div class="col-md-8 tileBox">
         <div class="txtHead">
-          <h2>I am Steve Smith,</h2>
+          <h2>I am TV Thyagharajon,</h2>
           <h3> Web UI/UX Designer/Front End Developer Based in England, UK.</h3>
         </div>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elitendisse interdum erat et neque tincidunt volutpat. Cras eget. Suspendisse interdum erat et neque tincidunt volutpat. <br/>
