--- a/me/index.html
+++ b/me/index.html
@@ -69,7 +69,7 @@
   <div class="container">
     <div>
       <h1>I'm a Business Leader experienced in profit center management & creating new retail formats</h1>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse interdum erat et neque tincidunt volutpat. Cras eget augue id dui varius pretium. Cras posuere dolor risus. Pellentesque elementum ultricies quam, sit amet rhoncus nisl viverra in. Cras imperdiet nisi a euismod molestie. Ut a metus arcu. Pellentesque feugiat dictum erat. Nulla vehicula condimentum purus, quis imperdiet nisl ultricies eleifend. Nulla quis rhoncus risus. Ut vel vehicula urna.</p>
+      <p>An engineer, PGDM with 30 years of business experience in fmcg area and modern retail, currently working with N.N.Fems Ind Ltd, Lagos, Nigeria.</p>
     </div>
   </div>
 </section>
@@ -78,10 +78,10 @@
   <div class="container">
     <div class="row"> 
       <!-- item -->
-      <div class="col-md-4 tileBox"> <img src="images/photo-1.jpg" alt="me"/> </div>
+      <!--div class="col-md-4 tileBox"> <img src="images/photo-1.jpg" alt="me"/> </div-->
       <div class="col-md-8 tileBox">
         <div class="txtHead">
-          <h2>I am TV Thyagharajon,</h2>
+          <h2>Key Accomplishments</h2-->
           <h3> Web UI/UX Designer/Front End Developer Based in England, UK.</h3>
         </div>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elitendisse interdum erat et neque tincidunt volutpat. Cras eget. Suspendisse interdum erat et neque tincidunt volutpat. <br/>
