--- a/me/index.html
+++ b/me/index.html
@@ -68,8 +68,8 @@
 <section id="introText">
   <div class="container">
     <div>
-      <h1>I'm a Business Leader experienced in profit center management & creating new retail formats</h1>
-      <p>An engineer, PGDM with 30 years of business experience in fmcg area and modern retail, currently working with N.N.Fems Ind Ltd, Lagos, Nigeria.</p>
+      <h1>I'm an engineer, PGDM with 30 years of business experience in fmcg area and modern retail, currently working with N.N.Fems Ind Ltd, Lagos, Nigeria.</h1>
+      <p>Profit centre management and new business creation in modern retailing environment combined with multi-functional experience in business management, strategic planning, international marketing, operations management and projects, over a variety of product groups and technologies. </p>
     </div>
   </div>
 </section>
@@ -82,12 +82,22 @@
       <div class="col-md-8 tileBox">
         <div class="txtHead">
           <h2>Key Accomplishments</h2-->
-          <h3> Web UI/UX Designer/Front End Developer Based in England, UK.</h3>
+          <h3>Reliance Retail</h3>
         </div>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elitendisse interdum erat et neque tincidunt volutpat. Cras eget. Suspendisse interdum erat et neque tincidunt volutpat. <br/>
-          <br/>
-          Cras eget augue id dui varius pretium.
-          Consectetur adipiscing elit. Suspendisse interdum erat et neque tincidunt volutpat. Cras eget augue id dui varius.</p>
+        <p>Setting up innovative businesses from scratch in multiple formats for Reliance Retail <br>
+        </br> Establishing Lifestyle formats Timeout (books & music), Office DEPOT, Vision Express </p>
+        <div class="txtHead">
+          <h3>Technova Imaging Systems </h3>
+        </div>
+        <p> Setting up an alternative business channel similar to Sam’s Club & competitive strategies for printing consumables & services business for Technova Imaging Systems (an Indian affiliate of Agfa Group) </p>
+        <div class="txtHead">
+          <h3> HTMT </h3>
+        </div>
+        <p>Marketing support system with retail network for a shopping channel business </p>
+        <div class="txtHead">
+          <h3> Hallmark Cards </h3>
+        </div>
+        <p>Led the strategy plan & expansion program for Hallmark Cards business in India</p>
       </div>
       <!-- end: --> 
     </div>
