--- a/me/index.html
+++ b/me/index.html
@@ -98,6 +98,12 @@
           <h3> Hallmark Cards </h3>
         </div>
         <p>Led the strategy plan & expansion program for Hallmark Cards business in India</p>
+        <div class="txtHead">
+          <h3>Hindustan Unilever Ltd. </h3>
+        </div>
+        <p>Developed blue prints for a new retail & foods business <br></br>Implemented a new segment strategy for the specialty chemicals business <br></br>Set up a new countrywide multi-product factory and distribution system for Lever’s business in Nepal<br></br>Established US Distribution and International sales system for Hospital Products Exports from India<br></br>Obtained the British Standards approval and the first ISO9000 license for an Indian factory. </p>
+
+
       </div>
       <!-- end: --> 
     </div>
