--- a/me/index.html
+++ b/me/index.html
@@ -251,6 +251,28 @@
     <div class="col-md-7"> Duis quis feugiat neque. Pellentesque eleifend, nisi vel mattis vestibulum, est lacus pretium quam. </div>
   </div>
 </div>
+<div class="row experience-details">
+  <div class="col-md-6">
+    <div class="col-md-5">
+      <div class="icon-block"><i class="fa fa-shopping-cart"></i></div>
+      <div class="pull-left">
+        <h5>Infore Managment</h5>
+        <h4>Consultant</h4>
+        <span>2008 - 2011</span> </div>
+    </div>
+    <div class="col-md-7"> Duis quis feugiat neque. Pellentesque eleifend, nisi vel mattis vestibulum, est lacus pretium quam. </div>
+  </div>
+  <div class="col-md-6">
+    <div class="col-md-5">
+      <div class="icon-block"><i class="fa fa-futbol-o"></i></div>
+      <div class="pull-left">
+        <h5>Infore Managment</h5>
+        <h4>Consultant</h4>
+        <span>2002 - 2008</span> </div>
+    </div>
+    <div class="col-md-7"> Duis quis feugiat neque. Pellentesque eleifend, nisi vel mattis vestibulum, est lacus pretium quam. </div>
+  </div>
+</div>
 </section>
 
 <!--Portfolio-->
