--- a/me/index.html
+++ b/me/index.html
@@ -232,7 +232,7 @@
 <div class="row experience-details">
   <div class="col-md-6">
     <div class="col-md-5">
-      <div class="icon-block"><i class="fa fa-shopping-cart"></i></div>
+      <div class="icon-block"><i class="fa fa-slider"></i></div>
       <div class="pull-left">
         <h5>Infore Managment</h5>
         <h4>Consultant</h4>
@@ -242,7 +242,7 @@
   </div>
   <div class="col-md-6">
     <div class="col-md-5">
-      <div class="icon-block"><i class="fa fa-futbol-o"></i></div>
+      <div class="icon-block"><i class="fa fa-pencil"></i></div>
       <div class="pull-left">
         <h5>Infore Managment</h5>
         <h4>Consultant</h4>
@@ -254,7 +254,7 @@
 <div class="row experience-details">
   <div class="col-md-6">
     <div class="col-md-5">
-      <div class="icon-block"><i class="fa fa-shopping-cart"></i></div>
+      <div class="icon-block"><i class="fa fa-user"></i></div>
       <div class="pull-left">
         <h5>Infore Managment</h5>
         <h4>Consultant</h4>
@@ -264,7 +264,7 @@
   </div>
   <div class="col-md-6">
     <div class="col-md-5">
-      <div class="icon-block"><i class="fa fa-futbol-o"></i></div>
+      <div class="icon-block"><i class="fa fa-line-chart"></i></div>
       <div class="pull-left">
         <h5>Infore Managment</h5>
         <h4>Consultant</h4>
