--- a/me/index.html
+++ b/me/index.html
@@ -232,7 +232,7 @@
 <div class="row experience-details">
   <div class="col-md-6">
     <div class="col-md-5">
-      <div class="icon-block"><i class="fa fa-slider"></i></div>
+      <div class="icon-block"><i class="fa fa-flag"></i></div>
       <div class="pull-left">
         <h5>Infore Managment</h5>
         <h4>Consultant</h4>
