--- a/me/index.html
+++ b/me/index.html
@@ -264,7 +264,7 @@
   </div>
   <div class="col-md-6">
     <div class="col-md-5">
-      <div class="icon-block"><i class="fa fa-line-chart"></i></div>
+      <div class="icon-block"><i class="fa fa-signal"></i></div>
       <div class="pull-left">
         <h5>Infore Managment</h5>
         <h4>Consultant</h4>
