Adding work exp

--- a/me/index.html
+++ b/me/index.html
@@ -234,21 +234,21 @@
     <div class="col-md-5">
       <div class="icon-block"><i class="fa fa-flag"></i></div>
       <div class="pull-left">
-        <h5>Infore Managment</h5>
-        <h4>Consultant</h4>
-        <span>2008 - 2011</span> </div>
+        <h5>NN FEMS Industries</h5>
+        <h4>Chief Operating Officer</h4>
+        <span>2014 - Present</span> </div>
     </div>
-    <div class="col-md-7"> Duis quis feugiat neque. Pellentesque eleifend, nisi vel mattis vestibulum, est lacus pretium quam. </div>
+    <div class="col-md-7"> Matter to go here </div>
   </div>
   <div class="col-md-6">
     <div class="col-md-5">
       <div class="icon-block"><i class="fa fa-pencil"></i></div>
       <div class="pull-left">
-        <h5>Infore Managment</h5>
-        <h4>Consultant</h4>
-        <span>2002 - 2008</span> </div>
+        <h5>Reliance Retail Ltd</h5>
+        <h4>Business Head - Office Depot Retail, Lifestyle Services and Gifts</h4>
+        <span>2006 - 2014</span> </div>
     </div>
-    <div class="col-md-7"> Duis quis feugiat neque. Pellentesque eleifend, nisi vel mattis vestibulum, est lacus pretium quam. </div>
+    <div class="col-md-7"> Responsible for conceiving and setting up of new retail businesses as a part of lifestyle vertical of Reliance Retail in retail formats such as Office Depot, Stationery, Optical Services, Gifting Solutions, Printing Services for multiple formats of retail stores. </div>
   </div>
 </div>
 <div class="row experience-details">
