--- a/me/index.html
+++ b/me/index.html
@@ -235,7 +235,7 @@
       <div class="icon-block"><i class="fa fa-flag"></i></div>
       <div class="pull-left">
         <h5>NN FEMS Industries</h5>
-        <h4>Chief Operating Officer</h4>
+        <h4>COO</h4>
         <span>2014 - Present</span> </div>
     </div>
     <div class="col-md-7"> Matter to go here </div>
@@ -245,10 +245,10 @@
       <div class="icon-block"><i class="fa fa-pencil"></i></div>
       <div class="pull-left">
         <h5>Reliance Retail Ltd</h5>
-        <h4>Business Head - Office Depot Retail, Lifestyle Services and Gifts</h4>
+        <h4>Business Head</h4>
         <span>2006 - 2014</span> </div>
     </div>
-    <div class="col-md-7"> Responsible for conceiving and setting up of new retail businesses as a part of lifestyle vertical of Reliance Retail in retail formats such as Office Depot, Stationery, Optical Services, Gifting Solutions, Printing Services for multiple formats of retail stores. </div>
+    <div class="col-md-7">As the Business Head - Office Depot Retail, Lifestyle Services and Gifts, I was responsible for conceiving and setting up of new retail businesses as a part of lifestyle vertical of Reliance Retail in retail formats such as Office Depot, Stationery, Optical Services, Gifting Solutions, Printing Services for multiple formats of retail stores. </div>
   </div>
 </div>
 <div class="row experience-details">
