--- a/me/index.html
+++ b/me/index.html
@@ -202,9 +202,9 @@
 <div class="container">
 <div class="heading"> 
   <!-- Heading -->
-  <h2>Experience</h2>
+  <h2>Work Experience</h2>
   <br/>
-  <h4>12 Years Experience!</h4>
+  <h4>30 Years Experience!</h4>
   <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting.</p>
 </div>
 <div class="row experience-details">
@@ -212,21 +212,21 @@
     <div class="col-md-5">
       <div class="icon-block"><i class="fa fa-cogs"></i></div>
       <div class="pull-left">
-        <h5>Infore Managment</h5>
-        <h4>Consultant</h4>
-        <span>2013 - 2014</span> </div>
+        <h5>NN Fems Industries</h5>
+        <h4>COO</h4>
+        <span>2014 - Present</span> </div>
     </div>
-    <div class="col-md-7"> Duis quis feugiat neque. Pellentesque eleifend, nisi vel mattis vestibulum, est lacus pretium quam. </div>
+    <div class="col-md-7"> Matter goes here</div>
   </div>
   <div class="col-md-6">
     <div class="col-md-5">
       <div class="icon-block"><i class="fa fa-send-o"></i></div>
       <div class="pull-left">
-        <h5>Infore Managment</h5>
-        <h4>Consultant</h4>
-        <span>2011 - 2013</span> </div>
+        <h5>Reliance Retail Ltd</h5>
+        <h4>Business Head</h4>
+        <span>2006 - 2013</span> </div>
     </div>
-    <div class="col-md-7"> Duis quis feugiat neque. Pellentesque eleifend, nisi vel mattis vestibulum, est lacus pretium quam. </div>
+    <div class="col-md-7"> As the Business Head - Office Depot Retail, Lifestyle Services and Gifts, I was responsible for conceiving and setting up of new retail businesses as a part of lifestyle vertical of Reliance Retail in retail formats such as Office Depot, Stationery, Optical Services, Gifting Solutions, Printing Services for multiple formats of retail stores.</div>
   </div>
 </div>
 <div class="row experience-details">
@@ -234,11 +234,11 @@
     <div class="col-md-5">
       <div class="icon-block"><i class="fa fa-flag"></i></div>
       <div class="pull-left">
-        <h5>NN FEMS Industries</h5>
-        <h4>COO</h4>
-        <span>2014 - Present</span> </div>
+        <h5>Technova Imaging Systems Pvt Ltd</h5>
+        <h4>Business Head - Laser Media</h4>
+        <span>2002 - 2005</span> </div>
     </div>
-    <div class="col-md-7"> Matter to go here </div>
+    <div class="col-md-7">Responsible for evolving Cash Club, an alternate retail channel for their print consumables business along the lines of Sam’s Club of Wal-Mart business model and implementing competitive strategies for printing plates business. </div>
   </div>
   <div class="col-md-6">
     <div class="col-md-5">
@@ -248,7 +248,7 @@
         <h4>Business Head</h4>
         <span>2006 - 2014</span> </div>
     </div>
-    <div class="col-md-7">As the Business Head - Office Depot Retail, Lifestyle Services and Gifts, I was responsible for conceiving and setting up of new retail businesses as a part of lifestyle vertical of Reliance Retail in retail formats such as Office Depot, Stationery, Optical Services, Gifting Solutions, Printing Services for multiple formats of retail stores. </div>
+    <div class="col-md-7"> </div>
   </div>
 </div>
 <div class="row experience-details">
