--- a/me/index.html
+++ b/me/index.html
@@ -205,7 +205,7 @@
   <h2>Work Experience</h2>
   <br/>
   <h4>30 Years Experience!</h4>
-  <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting.</p>
+  <p>Something about your overall experience</p>
 </div>
 <div class="row experience-details">
   <div class="col-md-6">
@@ -244,11 +244,11 @@
     <div class="col-md-5">
       <div class="icon-block"><i class="fa fa-pencil"></i></div>
       <div class="pull-left">
-        <h5>Reliance Retail Ltd</h5>
-        <h4>Business Head</h4>
-        <span>2006 - 2014</span> </div>
+        <h5>Shop24 Seven</h5>
+        <h4>Director Marketing</h4>
+        <span>2001 - 2002</span> </div>
     </div>
-    <div class="col-md-7"> </div>
+    <div class="col-md-7"> Responsible for marketing and managing the first 100% shopping channel on TV in India</div>
   </div>
 </div>
 <div class="row experience-details">
@@ -256,19 +256,19 @@
     <div class="col-md-5">
       <div class="icon-block"><i class="fa fa-user"></i></div>
       <div class="pull-left">
-        <h5>Infore Managment</h5>
-        <h4>Consultant</h4>
-        <span>2008 - 2011</span> </div>
+        <h5>Hallmark Cards Indian Licensee</h5>
+        <h4>CEO</h4>
+        <span>2000 - 2001</span> </div>
     </div>
-    <div class="col-md-7"> Duis quis feugiat neque. Pellentesque eleifend, nisi vel mattis vestibulum, est lacus pretium quam. </div>
+    <div class="col-md-7"> Responsible for managing 275 retail stores across the country dealing with greeting cards & gifts, besides leading creative, functional teams and two factories</div>
   </div>
   <div class="col-md-6">
     <div class="col-md-5">
       <div class="icon-block"><i class="fa fa-signal"></i></div>
       <div class="pull-left">
-        <h5>Infore Managment</h5>
-        <h4>Consultant</h4>
-        <span>2002 - 2008</span> </div>
+        <h5>Hindustan Lever Ltd</h5>
+        <h4>Manager - Corporate Planning</h4>
+        <span>1985 - 2000</span> </div>
     </div>
     <div class="col-md-7"> Duis quis feugiat neque. Pellentesque eleifend, nisi vel mattis vestibulum, est lacus pretium quam. </div>
   </div>
