--- a/me/index.html
+++ b/me/index.html
@@ -78,7 +78,7 @@
   <div class="container">
     <div class="row"> 
       <!-- item -->
-      <!--div class="col-md-4 tileBox"> <img src="images/photo-1.jpg" alt="me"/> </div-->
+      <div class="col-md-4 tileBox"> <img src="images/one.jpg" alt="me"/> </div>
       <div class="col-md-8 tileBox">
         <div class="txtHead">
           <h2>Key Accomplishments</h2-->
@@ -245,7 +245,7 @@
       <div class="icon-block"><i class="fa fa-pencil"></i></div>
       <div class="pull-left">
         <h5>Shop24 Seven</h5>
-        <h4>Director Marketing</h4>
+        <h4>Director - Marketing</h4>
         <span>2001 - 2002</span> </div>
     </div>
     <div class="col-md-7"> Responsible for marketing and managing the first 100% shopping channel on TV in India</div>
