--- a/me/index.html
+++ b/me/index.html
@@ -147,21 +147,21 @@
       <div class="col-md-4 skillBox">
         <div id="diagram-id-3" class="diagram" data-percent="100%"></div>
         <div class="chart-text">
-          <h4>Backend Developer</h4>
+          <h4>Retail & Project Planning</h4>
           
         </div>
       </div>
     </div>
     <div class="row">
       <div class="col-sm-6">
-        <h2>Programming Skills</h2>
-        <p class="mrgBtm20"> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum. </p>
+        <h2>Managerial Skills</h2>
+        <!--p class="mrgBtm20"> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum. </p-->
       </div>
       <div class="col-sm-6"> <br/>
         <br/>
         <br/>
         <div class="row">
-          <div class="col-md-2 skilltitle"><b>HTML5</b></div>
+          <div class="col-md-2 skilltitle"><b>Business Development</b></div>
           <div class="col-md-10">
             <div class="progress">
               <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 90%;"> <span class="sr-only">90% Complete</span> </div>
@@ -169,7 +169,7 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-md-2 skilltitle"><b>JavaScript</b></div>
+          <div class="col-md-2 skilltitle"><b>Marketing</b></div>
           <div class="col-md-10">
             <div class="progress">
               <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%;"> <span class="sr-only">80% Complete</span> </div>
@@ -177,7 +177,7 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-md-2 skilltitle"><b>Angular</b></div>
+          <div class="col-md-2 skilltitle"><b>FMCG</b></div>
           <div class="col-md-10">
             <div class="progress">
               <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%;"> <span class="sr-only">75% Complete</span> </div>
@@ -185,7 +185,24 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-md-2 skilltitle"><b>Knockout</b></div>
+          <div class="col-md-2 skilltitle"><b>Competitive Analysis</b></div>
+          <div class="col-md-10">
+            <div class="progress">
+              <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 90%;"> <span class="sr-only">90% Complete</span> </div>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-2 skilltitle"><b>Project Management</b></div>
+          <div class="col-md-10">
+            <div class="progress">
+              <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 90%;"> <span class="sr-only">90% Complete</span> </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-md-2 skilltitle"><b>Product Development</b></div>
           <div class="col-md-10">
             <div class="progress">
               <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%;"> <span class="sr-only">75% Complete</span> </div>
