--- a/me/index.html
+++ b/me/index.html
@@ -290,6 +290,18 @@
     <div class="col-md-7"> Duis quis feugiat neque. Pellentesque eleifend, nisi vel mattis vestibulum, est lacus pretium quam. </div>
   </div>
 </div>
+<div class="row experience-details">
+  <div class="col-md-6">
+    <div class="col-md-5">
+      <div class="icon-block"><i class="fa fa-tachometer"></i></div>
+      <div class="pull-left">
+        <h5>Larsen & Toubro</h5>
+        <h4>Project Engineer</h4>
+        <span>1981 - 1983</span> </div>
+    </div>
+    <div class="col-md-7">Involved with the project execution group of its 1.1 Million TPA Cement Investment in India.</div>
+  </div>
+</div>
 </section>
 
 <!--Portfolio-->
