--- a/me/index.html
+++ b/me/index.html
@@ -43,7 +43,7 @@
           <li><a href="#aboutUs" class="scroll-link">About</a></li>
           <li><a href="#skills" class="scroll-link">Skills</a></li>
           <li><a href="#experience" class="scroll-link">Experience</a></li>
-          <li><a href="#portfolio" class="scroll-link">Portfolio</a></li>
+          <li><a href="#portfolio" class="scroll-link">Education</a></li>
           <li><a href="#contactUs" class="scroll-link">Contact</a></li>
         </ul>
       </div>
@@ -305,11 +305,11 @@
 </section>
 
 <!--Portfolio-->
-<section id="portfolio" class="page-section section appear clearfix secPad">
+<section id="experience" class="page-section section appear clearfix secPad">
   <div class="container">
     <div class="heading"> 
       <!-- Heading -->
-      <h2>Portfolio</h2>
+      <h2>Education</h2>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse interdum erat et neque tincidunt volutpat. Cras eget augue id dui varius pretium. Cras posuere dolor risus. Pellentesque elementum ultricies quam, sit amet rhoncus nisl viverra in. Cras imperdiet nisi a euismod molestie. Ut a metus arcu. Pellentesque feugiat dictum erat.</p>
     </div>
     <div class="row">
