goofing around with portolfio'

--- a/me/index.html
+++ b/me/index.html
@@ -312,7 +312,8 @@
       <h2>Education</h2>
       <p>This is a brief description about where I studied.</p>
     </div>
-    <div class="row experience-details">
+    
+<div class="row experience-details">
   <div class="col-md-6">
     <div class="col-md-5">
       <div class="icon-block"><i class="fa fa-book"></i></div>
@@ -322,19 +323,18 @@
         <span>1983 - 1985</span> </div>
     </div>
     <div class="col-md-7">Two years post graduate diploma in Management-PGDM, specializing in Marketing and Operations at the Indian Institute of Management, Ahmedabad, India-affiliated to Harvard Business School.</div>
-    <div class="col-md-6">
+  </div>
+  <div class="col-md-6">
     <div class="col-md-5">
-      <div class="icon-block"><i class="fa fa-building"></i></div>
+      <div class="icon-block"><i class="fa fa-signal"></i></div>
       <div class="pull-left">
         <h5>GCE Chennai</h5>
         <h4>Mechanical & Industrial Engineering</h4>
         <span>1976 - 1981</span> </div>
     </div>
-    <div class="col-md-7">Five year Honours degree-BE (Hons), specializing in Mechanical & Industrial Engineering, securing top rank at the University level at the College of Engineering, Guindy, Madras University, Chennai, India. </div>
-  </div>
+    <div class="col-md-7">Five year Honours degree-BE (Hons), specializing in Mechanical & Industrial Engineering, securing top rank at the University level at the College of Engineering, Guindy, Madras University, Chennai, India </div>
   </div>
 </div>
-
   </div>
 </section>
 
