goofing around with portolfio'

--- a/me/index.html
+++ b/me/index.html
@@ -324,6 +324,7 @@
     </div>
     <div class="col-md-7">Two years post graduate diploma in Management-PGDM, specializing in Marketing and Operations at the Indian Institute of Management, Ahmedabad, India-affiliated to Harvard Business School.</div>
   </div>
+  <div class="row experience-details">
   <div class="col-md-6">
     <div class="col-md-5">
       <div class="icon-block"><i class="fa fa-signal"></i></div>
@@ -336,6 +337,7 @@
   </div>
 </div>
   </div>
+</div>
 </section>
 
 <!--Contact -->
